--- a/game.html
+++ b/game.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../game.css">
+    <link rel="stylesheet" href="./game.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="../game.js" defer></script>
+    <script src="./game.js" defer></script>
 
     <title>Game</title>
 </head>
 
 <body>
     <div class="header">
-        <div id="brand"><img alt="" id="logo"></div>
+        <div class="brand"><a href="https://www.emdidi.net/" title="Go to Emdidi">Emdidi</a></div>
     </div>
 
     <div class="container">
@@ -25,27 +25,80 @@
                 <h1>Match pictures</h1>
             </div>
             <div class="g-desc">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
-                    with the release of Letraset sheets containing Lorem</p>
+
+                <details>
+
+                    <summary>Objective:</summary>
+                    <p>
+                        The goal is to match two identical images before the time. Every matched picture is ten (10)
+                        points.
+                        The players can see their score increased by ten points every time two pictures match. When the
+                        players find all the identical images, they move to the next level. Each level determines the
+                        difficulty of the game. When they lose, the game is over. They can Restart the game in the
+                        beginning
+                        or exit(create or load a new username).
+                    </p>
+                </details>
+
+                <details>
+                    <summary>Instruction</summary>
+                    <p>Start the game </p>
+                    <ol>
+                        <li>Enter a username</li>
+                        <li>Click on the Save button: A message will display if the username is invalid.</li>
+                        <li>Click on the Start button: to run the game.</li>
+                    </ol>
+
+                    <p>Register new username </p>
+                    <ol>
+                        <li>Click on New</li>
+                        <li>Enter username</li>
+                        <li>Click on the Save button: a message will display if the username is invalid</li>
+                    </ol>
+
+
+                    <p>Load username </p>
+                    <ol>
+                        <li>Enter username</li>
+                        <li>Click on the Load button: A message will display if the username is invalid</li>
+                        <li>All the score info will automatically load</li>
+                    </ol>
+
+
+                    <p>Pause / Resume game </p>
+                    <ol>
+                        <li>The Pause button will be disabled when the game has not started</li>
+                        <li>When the game begins, the Pause button is enabled</li>
+                        <li>Click on the Pause button: the timer pauses, and the cards do not flip</li>
+                        <li>Click on Resume button: to continue the game</li>
+                    </ol>
+
+                    <p>Stop Game</p>
+                    <ol>
+                        <li>The Stop button will be disabled when the game has not started yet</li>
+                        <li>When the game begins, the Stop button is enabled</li>
+                        <li>Click on the Stop button: to stop the game and remove all the points earned during the
+                            game. </li>
+                    </ol>
+
+                </details>
             </div>
         </div>
 
         <div class="user-info">
             <div id="g-user">
                 <form>
-                    <p>Enter your username and save it </p>
+                    <!-- <p>Enter your username and save it </p> -->
                     <div class="mb-3">
                         <div class="mb-3 username-container">
-
-                            <label for="username">Username : </label>
+                            <label for="username" class="form-label">Username : </label>
                             <input type="text" name="username" id="username" minlength="4" maxlength="8" required
                                 class="form-control mb-3">
 
                             <div class="inv-fdb1"> Too Short</div>
                             <div class="inv-fdb2">Can't be found</div>
+                            <div class="inv-fdb3">Please, enter username</div>
+                            <div class="inv-fdb4">Please, enter different username</div>
 
                         </div>
 
@@ -63,7 +116,6 @@
                     <button id="new-user" class="btn btn-primary" disabled>New</button>
 
 
-
                     <button id="clear-all-users" class="btn btn-primary">Clear</button>
 
                 </div>
@@ -72,30 +124,32 @@
 
 
             <div class="score-bar">
-                <h1>Score : <span id="u-score">0</span></h1>
-                <h1>Level : <span id="u-level">6</span></h1>
-                <h1>Timer : <span id="u-timer">50</span>s</h1>
+                <h1>Score: <span id="u-score">0 </span></h1>
+                <h1>Level: <span id="u-level">1 </span></h1>
+                <h1>Timer: <span><span id="u-timer">30</span>s</span>
+                </h1>
             </div>
 
         </div>
-        <div class="g-cmd my-3">
+        <div class="g-info">
+            <div class="g-cmd my-3">
 
-            <button class="btn btn-primary" id="start-game">Start</button>
+                <button class="btn btn-primary" id="start-game">Start</button>
 
-            <button class="btn btn-primary" id="pause-game" disabled>Pause</button>
+                <button class="btn btn-primary" id="pause-game" disabled>Pause</button>
 
-            <button class="btn btn-primary" id="stop-game" disabled>Stop</button>
-            <!-- 
+                <button class="btn btn-primary" id="stop-game" disabled>Stop</button>
+                <!-- 
             <button class="clickme" onclick="callHim(this)">clickme</button> -->
 
-        </div>
+            </div>
 
-        <div class="g-screen ">
-            <div class="g-content">
-               
-                <!-- <div class="g-cards"> <div class="g-back"> <img src="./rma2/11.png" value="2"> </div> <div class="g-front"> <h1 onclick="flipCard(this)"></h1> </div> </div>
-                <div class="g-cards"> <div class="g-back"> <img src="./rma2/11.png" value="2"> </div> <div class="g-front"> <h1 onclick="flipCard(this)"></h1> </div> </div>
-            </div> -->
+            <div class="g-screen ">
+                <div class="g-content">
+
+                </div>
+                <div id="alertMe"></div>
+            </div>
         </div>
     </div>
 
